--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Benson The<br />
 						Analyst Portfolio</h1>
-						<p>A certified Data Analyst skilled in SQL, Power BI, Python & Ms Excel <a href="https://www.linkedin.com/in/benson-edah-ba4253132" target="_blank">@BensontheAnalyst</a></p>
+						<p>A certified Data Analyst skilled in SQL, Power BI, Python & Ms Excel <a href="https://www.linkedin.com/in/benson-edah" target="_blank">@BensontheAnalyst</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -40,7 +40,7 @@
 						</ul>
 						<ul class="icons">
 							 
-							<li><a href="https://www.linkedin.com/in/benson-edah-ba4253132" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/benson-edah" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/EDAHBENSON20" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -156,7 +156,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									 
-									<li><a href="https://www.linkedin.com/in/benson-edah-ba4253132" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/benson-edah" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/EDAHBENSON20" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
